[gd_scene load_steps=4 format=2]

[ext_resource path="res://Nodes/Character/CharacterBody.gd" type="Script" id=1]
[ext_resource path="res://Assets/Shadow.png" type="Texture" id=2]

[sub_resource type="Animation" id=1]
resource_name = "HitFlash"
length = 0.2
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ Color( 1, 1, 1, 1 ), Color( 20, 20, 20, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="CharacterBody" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="Shadow" type="Sprite" parent="."]
position = Vector2( 0, 2 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="HitBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/HitFlash = SubResource( 1 )
[connection signal="area_entered" from="HitBox" to="." method="_on_HitBox_area_entered"]
